--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -13,6 +13,7 @@ $color-light-grey-bg: #2D2F35;
 $color-coldgrey-50: #7E8390;
 $color-primary-50: #3A85FF; //NEW COLOR
 $color-primary-60: #0062FF;
+$color-error-50: #F64E4E;
 
 $color-darkweb-text-primary: #E2E5E9;
 $color-darkweb-basic-primary: #4789EB;
