--- a/templates/ibm-apim-get-started.html.twig
+++ b/templates/ibm-apim-get-started.html.twig
@@ -8,6 +8,7 @@
 #}
 
 <div class="ibmapimGetStarted">
+  <img src="{{ base_path ~ directory }}/images/decorative-plus-big.svg" alt="decorative plus" class="decorativeImg">
   <div id="get-started-wrapper">
     <h1 class="page-header">{{ 'Get Started'|t }}</h1>
     <div class="getStartedContentWrapper startguide">
