--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -229,7 +229,7 @@ p {
     outline: none;
 }
 
-.button-transparent {
+.button-transparent, .apicsecondary {
     background-color: transparent !important;
     font-size: 1rem !important;
     font-weight: 500;
