--- a/templates/node--application.html.twig
+++ b/templates/node--application.html.twig
@@ -83,12 +83,20 @@
                       {% if appImageUploadEnabled %}
                         <li class="uploadImage"><a
                               href="{{ path('apic_app.image_upload', {'appId': node.application_id.value}) }}"
-                              title="{{ 'Upload image'|t }}">{{ 'Upload image'|t }}</a>
+                              title="{{ 'Upload image'|t }}"
+                              class="use-ajax"
+                              data-dialog-type="modal"
+                              data-dialog-options="{&quot;width&quot;:&quot;auto&quot;}"  
+                              >{{ 'Upload image'|t }}</a>
                         </li>
                       {% endif %}
                       <li class="deleteApplication"><a
                             href="{{ path('apic_app.delete', {'appId': node.application_id.value}) }}"
-                            title="{{ 'Delete App'|t }}">{{ 'Delete'|t }}</a>
+                            title="{{ 'Delete App'|t }}"
+                            class="use-ajax"
+                            data-dialog-type="modal"
+                            data-dialog-options="{&quot;width&quot;:&quot;auto&quot;}"  
+                            >{{ 'Delete'|t }}</a>
                       </li>
                     {% endif %}
                   </ul>
