Added template for applications in subscribe wizard, modified product-related templates and corresponding scss

--- a/page--front.html.twig
+++ b/page--front.html.twig
@@ -355,7 +355,7 @@
                     <p>© ВТБ, 2021</p>
                 </div>
                 <div class="footer-info-links">
-                    <a class="link-primary" href="{{ base_path ~ directory }}/documents/user_agreement.docx" target="_blank">Пользовательское соглашение</a>
+                    <a class="link-primary" href="{{ base_path ~ directory }}/documents/user_agreement.pdf" target="_blank">Пользовательское соглашение</a>
                     <a class="link-primary" href="https://www.vtb.ru/o-banke/">О Банке ВТБ</a>
                     <a class="link-primary" href="{{ base_path ~ directory }}/documents/Obrabotka-pdn.pdf" target="_blank">Положение об организации обработки персональных данных в Банке ВТБ (ПАО)</a>
                 </div>
