--- a/templates/node--consumerorg.html.twig
+++ b/templates/node--consumerorg.html.twig
@@ -124,7 +124,12 @@
               title="{{ 'Invite other users to join your consumer organization'|t }}"
               data-dialog-type="modal"
               data-dialog-options="{&quot;width&quot;:&quot;auto&quot;}">
-              <span>{{ 'Invite'|t }}</span>
+                <span class="invite-btn">
+                  <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.54167 1.16667C7.54167 0.867513 7.29915 0.625 7 0.625C6.70085 0.625 6.45833 0.867513 6.45833 1.16667L6.45833 6.45833H1.16667C0.867512 6.45833 0.625 6.70085 0.625 7C0.625 7.29915 0.867512 7.54167 1.16667 7.54167H6.45833L6.45833 12.8333C6.45833 13.1325 6.70085 13.375 7 13.375C7.29915 13.375 7.54167 13.1325 7.54167 12.8333V7.54167H12.8333C13.1325 7.54167 13.375 7.29915 13.375 7C13.375 6.70085 13.1325 6.45833 12.8333 6.45833H7.54167V1.16667Z" fill="#3A85FF"/>
+                  </svg>
+                  <p>Пригласить участника</p>
+                </span>
             </a>
           </div>
         {% endif %}
