--- a/scss/_onboarding.scss
+++ b/scss/_onboarding.scss
@@ -182,7 +182,7 @@
     }
 }
 
-@media (max-width: 424px) and (max-height: 500px) {
+@media (max-width: 424px) and (max-height: 750px) {
     .onboarding {
         margin: 3rem 1rem 0;
         h1 {
@@ -275,7 +275,7 @@
         left: 2rem;
         padding: 1rem;
         bottom: 15%;
-        width: min-content !important
+        width: auto !important
     }
 }
 
@@ -292,10 +292,6 @@
             position: absolute;
             right: 3.6rem;
             top: 9.5rem;
-        }
-
-        &-small {
-            width: min-content !important;
         }
     }
 }
