--- a/templates/node--product--subscribewizard.html.twig
+++ b/templates/node--product--subscribewizard.html.twig
@@ -19,16 +19,7 @@
 <article id="node-{{ node.id }}" {{ attributes.addClass(classes) }} aria-label="{{ node.title[0].value }}">
   <div class="apicProduct">
     <header class="node__header--has-meta node__header apicProductHeader">
-      <div class="apicProductTitle">
-        {% if content.apic_image is defined and content.apic_image|render|trim is not empty %}
-          <div class="apicProductIcon">
-            {{ content.apic_image }}
-          </div>
-        {% elseif showPlaceholders %}
-          <div class="apicProductIcon">
-            <img src="{{- placeholderUrl -}}" alt=""/>
-          </div>
-        {% endif %}
+      {# <div class="apicProductTitle">
         <h1 class="node__title">
         <span id="node-{{ node.id }}-title"
           class="field field-name-title field-formatter-string field-type-string field-label-hidden">{{- label -}}</span>
@@ -36,7 +27,7 @@
         {% if showVersions %}
           <span class="apicProductVersion">{{- content.apic_version -}}</span>
         {% endif %}
-      </div>
+      </div> #}
     </header>
     <div class="node__content apicProductBody">
       <div class="apicProductTags">
@@ -47,7 +38,7 @@
       </div>
       {% set multipleRates = false %}
       {% set requireApproval = false %}
-      <div class="field plans">
+      {# <div class="field plans">
         <h3 class="field__label label">{{ 'Plans'|t }}</h3>
         <div class="subHeading">
         </div>
@@ -226,6 +217,115 @@
             </div>
           </div>
         {% endif %}
+      </div> #}
+
+      <div class="field plans">
+        <h2 class="field__label label tariff-label">{{ 'Тарифные планы' }}</h2>
+        <div class="subHeading">
+          {% if not userLoggedIn %}
+            <div class="notLoggedIn">
+              <p>
+                {% if selfSignUpEnabled %}
+                  {% set register_path = path('user.register') %}
+                  {% set login_path = path('user.login') %}
+                  {% trans %}
+                    In order to subscribe, you must <a href="{{ register_path }}">create an account</a> or <a
+                      href="{{ login_path }}">sign in</a>.
+                  {% endtrans %}
+                {% else %}
+                  {% set login_path = path('user.login') %}
+                  {% trans %}
+                    In order to subscribe, you must <a href="{{ login_path }}">sign in</a>.
+                  {% endtrans %}
+                {% endif %}</p>
+            </div>
+          {% endif %}
+        </div>
+        <div class='scroll-right tariff'>
+          <p class='text-muted'>Скрольте вправо</p>
+          <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M6.72225 12.1482C6.85225 12.2882 7.02225 12.3582 7.20225 12.3582C7.36225 12.3582 7.51225 12.3082 7.64225 12.1882L13.6822 6.69817C13.9922 6.41817 13.9922 5.93817 13.6822 5.65817L7.64225 0.168174C7.37225 -0.0718255 6.96225 -0.0518256 6.72225 0.208174C6.48225 0.478174 6.49225 0.888175 6.76225 1.12817L11.5979 5.52817H0.702246C0.343261 5.52817 0.0522461 5.81919 0.0522461 6.17817C0.0522461 6.53716 0.343261 6.82817 0.702246 6.82817H11.5979L6.76225 11.2282C6.50225 11.4682 6.48225 11.8782 6.72225 12.1482Z" fill="#b1b5bb"/>
+          </svg>
+        </div>
+        <div class="planComparisonTable">
+          <div class="apicPlansTable">
+            <div class="apicTableFixedContainer">
+
+            {# ВЕРСИЯ 3 #}
+              <div class="tariff-plans-section">
+                <div class="tariff-plans">
+                    {% for planid, plan in planList %}
+                      <div class="tariff-plan">
+                        <h4 class="tariff-plan-title">{{ plan.data.title }}</h4>
+                        <p class="tariff-plan-label">Вызовов в час</p>
+                        {# {% if plan.data.apiList is empty or api.node.api_xibmname[0].value in plan.data.apiList %}
+                          <h2 class="tariff-plan-api_calls">{{ plan.rateLimit }}</h2>
+                        {% else %}
+                          &#x2014;
+                        {% endif %} #}
+                        <p class="tariff-plan-label">Стоимость в месяц</p>
+                        <h2 class="tariff-plan-price">{{ plan.billing-info }}</h2>
+                        <button type="submit" name="selectedPlan" value="{{ plan.data.title }}:{{ planid }}" class="button-transparent button-transparent-blue tariff-plan-button-subscribe">
+                            Выбрать
+                        </button>
+                      </div>
+                    {% endfor %}
+                </div>
+                <div class="tariff-plans-section-description">
+                  <p class="tariff-plans-section-description-free">Вызовы API на искусственно сгенерированных данных</p>
+                  <p class="tariff-plans-section-description-paid">Продакшн-вызовы с использованием истинных данных, содержащих персональные данные, коммерческую и банковскую тайну</p>
+                </div>
+                <div class="tariff-plans-section-text">
+                  <p class="">Один тариф действует для одного приложения, подписанного на данный API</p>
+                  <p class="tariff-plans-section-description-paid">По вопросам тарифных планов обращайтесь к вашему бизнес-партнеру от Банка ВТБ или по адресу <a href="mailto:portal-open_api@vtb.ru" class="link-primary">developer@vtb.ru</a></p>
+                </div>
+              </div>
+
+
+
+            </div>
+          </div>
+          <div class="tableKey">
+            {% if multipleRates %}
+              <div class="multipleRateLimitsMessage hidden">
+                {{ '* burst limit exists; hover to view limits'|t }}
+              </div>
+            {% endif %}
+            {% if requireApproval %}
+              <div class="planRequiresSubKey">
+                <p>
+                  {{ key_svg|raw }}
+                  {{ 'Requires subscription approval'|t }}
+                </p>
+              </div>
+            {% endif %}
+
+          </div>
+          {% if userLoggedIn and not userHasSubManage %}
+            <div class="productLoginMessage">
+              <div class="alert short alert-info" role="alert">
+                <div class="alert-details">
+                <span class="icon icon-info" aria-hidden="true">
+                  <svg width="16px" height="16px" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink" fill-rule="evenodd">
+                    <path
+                        d="M8,0 C3.6,0 0,3.6 0,8 C0,12.4 3.6,16 8,16 C12.4,16 16,12.4 16,8 C16,3.6 12.4,0 8,0 L8,0 Z M8,4 C8.6,4 9,4.4 9,5 C9,5.6 8.6,6 8,6 C7.4,6 7,5.6 7,5 C7,4.4 7.4,4 8,4 L8,4 Z M10,12 L6,12 L6,11 L7,11 L7,8 L6,8 L6,7 L9,7 L9,11 L10,11 L10,12 L10,12 Z"
+                        id="Shape"></path>
+                  </svg>
+                </span>
+                  <div class="alert-text-wrapper">
+                    <h4 class="sr-only">{{ 'Informative message'|t }}</h4>
+                    <ul class="item-list item-list--messages">
+                      <li class="item item--message">
+                        {{ 'Only users with the required permissions can subscribe to plans'|t }}
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          {% endif %}
+        </div>
       </div>
       <div class="addToAny">{{ content.addtoany }}</div>
     </div>
