--- a/templates/node--product.html.twig
+++ b/templates/node--product.html.twig
@@ -140,97 +140,7 @@
     <div class="apicPlansTable">
       <div class="apicTableFixedContainer">
 
-{# ВЕРСИЯ ОДИН #}
-        {# <div class="tariff-plans-section tariff-plans-section-free">
-          <div class="tariff-plans tariff-plans-free">
-            <div class="tariff-plan">
-              <h4 class="tariff-plan-title">Free</h4>
-              <p class="tariff-plan-label">Вызовов в день</p>
-              <h2 class="tariff-plan-api_calls">10</h2>
-              <p class="tariff-plan-label">Стоимость в месяц</p>
-              <h2 class="tariff-plan-price">Бесплатно</h2>
-              <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">Подписаться</button>
-            </div>
-          </div>
-          <p class="tariff-plans-section-description tariff-plans-section-free-description">Вызовы API на искусственно сгенерированных данных</p>
-        </div>
-        <div class="tariff-plans-section tariff-plans-section-paid">
-          <div class="tariff-plans tariff-plans-paid">
-            <div class="tariff-plan">
-              <h4 class="tariff-plan-title">Silver</h4>
-              <p class="tariff-plan-label">Вызовов в день</p>
-              <h2 class="tariff-plan-api_calls">100</h2>
-              <p class="tariff-plan-label">Стоимость в месяц</p>
-              <h2 class="tariff-plan-price">1 000 ₽ </h2>
-              <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">Подписаться</button>
-            </div>
-            <div class="tariff-plan">
-              <h4 class="tariff-plan-title">Gold</h4>
-              <p class="tariff-plan-label">Вызовов в день</p>
-              <h2 class="tariff-plan-api_calls">1 000</h2>
-              <p class="tariff-plan-label">Стоимость в месяц</p>
-              <h2 class="tariff-plan-price">2 500 ₽ </h2>
-              <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">Подписаться</button>
-            </div>
-            <div class="tariff-plan">
-              <h4 class="tariff-plan-title">Platinum</h4>
-              <p class="tariff-plan-label">Вызовов в день</p>
-              <h2 class="tariff-plan-api_calls">10 000</h2>
-              <p class="tariff-plan-label">Стоимость в месяц</p>
-              <h2 class="tariff-plan-price">5 000 ₽ </h2>
-              <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">Подписаться</button>
-            </div>
-          </div>
-          <p class="tariff-plans-section-description">Продакшн-вызовы с использованием истинных данных, содержащих персональные данные, коммерческую и банковскую тайну</p>
-        </div> #}
-
-{# ВЕРСИЯ ДВА #}
-        {# <div class="tariff-plans-section">
-          <div class="tariff-plans">
-            <div class="tariff-plan">
-              <h4 class="tariff-plan-title">Free</h4>
-              <p class="tariff-plan-label">Вызовов в день</p>
-              <h2 class="tariff-plan-api_calls">10</h2>
-              <p class="tariff-plan-label">Стоимость в месяц</p>
-              <h2 class="tariff-plan-price">Бесплатно</h2>
-              <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">Подписаться</button>
-            </div>
-            <div class="tariff-plan">
-              <h4 class="tariff-plan-title">Silver</h4>
-              <p class="tariff-plan-label">Вызовов в день</p>
-              <h2 class="tariff-plan-api_calls">100</h2>
-              <p class="tariff-plan-label">Стоимость в месяц</p>
-              <h2 class="tariff-plan-price">1 000 ₽ </h2>
-              <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">Подписаться</button>
-            </div>
-            <div class="tariff-plan">
-              <h4 class="tariff-plan-title">Gold</h4>
-              <p class="tariff-plan-label">Вызовов в день</p>
-              <h2 class="tariff-plan-api_calls">1 000</h2>
-              <p class="tariff-plan-label">Стоимость в месяц</p>
-              <h2 class="tariff-plan-price">2 500 ₽ </h2>
-              <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">Подписаться</button>
-            </div>
-            <div class="tariff-plan">
-              <h4 class="tariff-plan-title">Platinum</h4>
-              <p class="tariff-plan-label">Вызовов в день</p>
-              <h2 class="tariff-plan-api_calls">10 000</h2>
-              <p class="tariff-plan-label">Стоимость в месяц</p>
-              <h2 class="tariff-plan-price">5 000 ₽ </h2>
-              <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">Подписаться</button>
-            </div>
-          </div>
-          <div class="tariff-plans-section-description">
-            <p class="tariff-plans-section-description-free">Вызовы API на искусственно сгенерированных данных</p>
-            <p class="tariff-plans-section-description-paid">Продакшн-вызовы с использованием истинных данных, содержащих персональные данные, коммерческую и банковскую тайну</p>
-          </div>
-          <div class="tariff-plans-section-text">
-            <p class="">Один тариф действует для одного приложения, подписанного на данный API</p>
-            <p class="tariff-plans-section-description-paid">По вопросам тарифных планов обращайтесь к вашему бизнес-партнеру от Банка ВТБ или по адресу <a href="mailto:portal-open_api@vtb.ru" class="link-primary">portal-open_api@vtb.ru</a></p>
-          </div>
-        </div> #}
-
-{# ВЕРСИЯ 3 #}
+      {# ВЕРСИЯ 3 #}
         <div class="tariff-plans-section">
           <div class="tariff-plans">
               {% for planid, plan in planList %}
@@ -243,7 +153,7 @@
                     &#x2014;
                   {% endif %}
                   <p class="tariff-plan-label">Стоимость в месяц</p>
-                  <h2 class="tariff-plan-price">Бесплатно</h2>
+                  <h2 class="tariff-plan-price">{{ plan.billing-info }}</h2>
                   {% if subscribable %}
                     <a href="{{ path('ibm_apim.subscription_wizard.noplan') }}/?productId={{ node.id }}&planTitle={{ plan.data.title }}&planId={{ planid }}">
                       <button class="button-transparent button-transparent-blue tariff-plan-button-subscribe">{{ 'Subscribe'|t }}</button>
@@ -270,201 +180,6 @@
             <p class="tariff-plans-section-description-paid">По вопросам тарифных планов обращайтесь к вашему бизнес-партнеру от Банка ВТБ или по адресу <a href="mailto:portal-open_api@vtb.ru" class="link-primary">developer@vtb.ru</a></p>
           </div>
         </div>
-
-        {# <div class="apicTableFixedColumn">
-          <table>
-            <thead>
-            <tr>
-              <th class="apicFixedColumn tlcorner hidden">
-                <div class="apicTableStandardCell title"><span class="planName">{{ "APIs"|t }}</span></div>
-              </th>
-              {% for planid, plan in planList %}
-                <th class="planTitle">
-                  <div class="apicTableStandardCell title">
-                    <span class="planName">
-                      {{ plan.data.title }}
-                    </span>
-                    {% if plan.requiresApproval %}
-                      {% set requireApproval = true %}
-                      {{ key_svg|raw }}
-                    {% endif %}
-                    <div class="planSubscribe">
-                      {% if billing %}
-                        <div class="apicBillingInfo">
-                          {{ plan.billing-info }}
-                        </div>
-                      {% endif %}
-                      {% if plan.data.description is defined and plan.data.description is not empty %}
-                        <div class="planDescription">
-                          {{ plan.data.description }}
-                        </div>
-                      {% endif %}
-                      {% if subscribable %}
-                        <a class="button"
-                          href="{{ path('ibm_apim.subscription_wizard.noplan') }}/?productId={{ node.id }}&planTitle={{ plan.data.title }}&planId={{ planid }}">
-                          {{ 'Subscribe'|t }}
-                        </a>
-                      {% else %}
-                        <button disabled>{{ 'Subscribe'|t }}</button>
-                        <div class="apicSubscribeMsg">
-                          {% if content.product_state[0].value is defined and content.product_state[0].value == 'deprecated' %}
-                            {{ 'This plan is deprecated'|t }}
-                          {% else %}
-                            {{ 'This plan is not subscribable'|t }}
-                          {% endif %}
-                        </div>
-                      {% endif %}
-                    </div>
-                  </div>
-                </th>
-              {% endfor %}
-            </tr>
-            </thead>
-            <tbody class="apicPlansTableBody hidden">
-            {% if apiList is defined and apiList is not empty %}
-            {% for api in apiList %}
-              <tr class="api-{% if loop.index is divisibleby(2) %}even{% else %}odd{% endif %}">
-                <th class="apicFixedColumn">
-                  <div class="apicApiCell">
-                    <div class="apicTwistieTitle">
-                      <a onclick="Drupal.settings.product.toggleTwistieRow(event)" href="javascript:">
-                        <span class="apicTwistieIcon"><i class="fa fa-angle-right"></i></span>
-                        <span
-                            class="apiName"
-                            title="{{ api.node.title[0].value }}">{{ api.node.title[0].value }}{% if showVersions %} {{ api.node.apic_version[0].value }}{% endif %}</span>
-                      </a>
-                    </div>
-                  </div>
-                </th>
-                {% for planid, plan in planList %}
-                  <td>
-                    <div class="apicTableStandardCell"
-                        data-api="{{ api.node.title[0].value }}{% if showVersions %} {{ api.node.apic_version[0].value }}{% endif %}">
-                      {% if plan.data.apiList is empty or api.node.api_xibmname[0].value in plan.data.apiList %}
-                        {% if plan.rateData is defined %}
-                          {% set multipleRates = true %}
-                          <span class="multiRateLimits"
-                                data-ratelimits="{{ plan.rateData }}">{{ plan.rateLimit }}</span>
-                        {% else %}
-                          {{ plan.rateLimit }}
-                        {% endif %}
-                      {% else %}
-                        &#x2014;
-                      {% endif %}
-                    </div>
-                  </td>
-                {% endfor %}
-              </tr>
-              <tr class="apicTwistieRow api-{% if loop.index is divisibleby(2) %}even{% else %}odd{% endif %}">
-                <th class="apicFixedColumn">
-                  {% for pathSegment, path in api.swagger.paths %}
-                    {% for verb, operation in path %}
-                      {% if verb|upper in ['PUT', 'POST', 'GET', 'DELETE', 'OPTIONS', 'HEAD', 'PATCH'] %}
-                        <div class="apicApiOperation apicTruncate apicSecondaryRow {{ verb|lower }}"
-                            title="{{ verb|upper }} {{ pathSegment }}">
-                          <span class="verb">{{ verb|upper }}</span>
-                          <span class="path">{{ pathSegment }}</span>
-
-                        </div>
-                      {% endif %}
-                    {% endfor %}
-                  {% endfor %}
-                </th>
-                {% for planid, plan in planList %}
-                  <td>
-                    <div class="apicTableStandardCell">
-                      {% for apiName, apiData in plan.nodes %}
-                        {% if apiName == api.node.apic_ref[0].value|clean_class %}
-                          {% for path, verbs in apiData.resources %}
-                            {% for verb, verbData in verbs %}
-                              <div class="apicSecondaryRow" data-op="{{ verb }} {{ path }}">
-                                {% if verbData.enabled %}
-                                  {% if verbData.rateData is defined %}
-                                    {% set multipleRates = true %}
-                                    <span class="multiRateLimits"
-                                          data-ratelimits="{{ verbData.rateData }}">{{ verbData.rateLimit }}</span>
-                                  {% else %}
-                                    {{ verbData.rateLimit }}
-                                  {% endif %}
-                                {% else %}
-                                  <i class="fa fa-times"></i>
-                                {% endif %}
-                              </div>
-                            {% endfor %}
-                          {% endfor %}
-                        {% endif %}
-                      {% endfor %}
-                    </div>
-                  </td>
-                {% endfor %}
-              </tr>
-            {% endfor %}
-            {% else %}
-              {% for planid, plan in planList %}
-                  <td>
-                    <div class="apicTableStandardCell"
-                        data-api="{{ api.node.title[0].value }}{% if showVersions %} {{ api.node.apic_version[0].value }}{% endif %}">
-                      {% if plan.data.apiList is empty or api.node.api_xibmname[0].value in plan.data.apiList %}
-                        {% if plan.rateData is defined %}
-                          {% set multipleRates = true %}
-                          <span class="multiRateLimits"
-                                data-ratelimits="{{ plan.rateData }}">{{ plan.rateLimit }}</span>
-                        {% else %}
-                          {{ plan.rateLimit }}
-                        {% endif %}
-                      {% else %}
-                        &#x2014;
-                      {% endif %}
-                    </div>
-                  </td>
-                {% endfor %}
-              </tr>
-              <tr class="apicTwistieRow api-{% if loop.index is divisibleby(2) %}even{% else %}odd{% endif %}">
-                <th class="apicFixedColumn">
-                  {% for pathSegment, path in api.swagger.paths %}
-                    {% for verb, operation in path %}
-                      {% if verb|upper in ['PUT', 'POST', 'GET', 'DELETE', 'OPTIONS', 'HEAD', 'PATCH'] %}
-                        <div class="apicApiOperation apicTruncate apicSecondaryRow {{ verb|lower }}"
-                            title="{{ verb|upper }} {{ pathSegment }}">
-                          <span class="verb">{{ verb|upper }}</span>
-                          <span class="path">{{ pathSegment }}</span>
-
-                        </div>
-                      {% endif %}
-                    {% endfor %}
-                  {% endfor %}
-                </th>
-              {% endif %}
-            </tbody>
-            <tfoot>
-            </tfoot>
-          </table>
-
-          {% if apiList is defined and apiList is not empty %}
-          <div class="planTableSelector">
-            <span class="hideDetails">
-            <a class="showComparisonTable" title="{{ 'Show a table comparing the available plans'|t }}"
-              onclick="Drupal.settings.product.showTable(event)" href="javascript:">
-              <span class="linkLabel">{{ 'View details'|t }}</span>
-              <span class="apicTwistieIcon"><i class="fa fa-angle-down"></i></span>
-            </a>
-
-              <a class="showPlans hidden" title="Show the available plans"
-                onclick="Drupal.settings.product.showPlans(event)" href="javascript:">
-              <span class="linkLabel">{{ 'Hide details'|t }}</span>
-              <span class="apicTwistieIcon"><i class="fa fa-angle-up"></i></span>
-              </a>
-            </span>
-          </div>
-          {% endif %}
-        </div> #}
-
-
-
-
-
-
-
 
 
 
