Added two templates for filter handling in applicaion and products pages

--- a/scss/_drupal-override-general.scss
+++ b/scss/_drupal-override-general.scss
@@ -624,6 +624,11 @@ li.dropit-trigger a {
   color: $color-primary-50;
 }
 
+// Кнопка перезагрузки возле инпута ввода текста
+span.input-group-addon {
+  display: none !important;
+}
+
 // Инпут "Заголовок"
 input#edit-title {
   background-color: transparent;
