--- a/scss/_drupal-override-product.scss
+++ b/scss/_drupal-override-product.scss
@@ -432,6 +432,7 @@ h2.field__label.label.tariff-label {
 .tariff-plan {
   max-width: 17.5rem;
   min-width: 11rem;
+  width: 100%;
   
   &-title {
     margin-bottom: .5rem;
@@ -444,12 +445,20 @@ h2.field__label.label.tariff-label {
   
   &-api_calls {
     margin: 0 0 1rem;
-    font-weight: 600;
+    display: flex;
+
+    h2 {
+      font-weight: 600;
+    }
   }
   
   &-price {
     margin: 0 0 1.25rem;
     font-weight: 600;
+
+    &-title {
+      margin-left: .5rem;
+    }
   }
   
   &-button-subscribe {
