--- a/scss/_drupal-override-product.scss
+++ b/scss/_drupal-override-product.scss
@@ -21,6 +21,16 @@
   }
 }
 
+.route-productview .apicMainContent, .route-productapi .apicMainContent {
+  display: flex;
+  align-items: flex-end;
+
+  .row {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 // Карточка продукта в каталоге API ----------------------------------------------------
 .bx--card .apicProductCard {
   padding-left: 0;
@@ -427,6 +437,16 @@ h2.field__label.label.tariff-label {
 
 .footer-bg .tariff-plans {
   background: #111215;
+}
+@media (max-width: 768px) {
+  .footer-bg .tariff-plans {
+    padding-top: 3rem;
+  }
+}
+@media (max-width: 425px) {
+  .footer-bg .tariff-plans {
+    padding-top: 1rem;
+  }
 }
 
 .tariff-plan {
