--- a/scss/_drupal-override-product.scss
+++ b/scss/_drupal-override-product.scss
@@ -453,6 +453,7 @@ h2.field__label.label.tariff-label {
   max-width: 17.5rem;
   min-width: 11rem;
   width: 100%;
+  margin-right: 1rem;
   
   &-title {
     margin-bottom: .5rem;
